@@ -1,3 +1,6 @@
+  * Removed useless "antialiasing" option on startup dialog
+  * Startup dialog will remember your previously-chosen options
+
 Minecraft X-Ray 2.7 Maintenance Branch 7 (2011.01.21)
 
   * Key mappings are now taken from a config file which will get
